--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,17 +1,10 @@
 ---
-import { siteMetadata } from '../siteMetadata';
+import { siteMetadata } from "../siteMetadata";
 ---
 
 <footer class="foot">&copy; 2025 {siteMetadata.title}</footer>
 
 <style>
-    body {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh; /* Ensure the body takes the full height of the viewport */
-        margin: 0;
-    }
-
     .foot {
         text-align: center;
         margin: 1em;
