--- a/src/pages/testMatrix.astro
+++ b/src/pages/testMatrix.astro
@@ -1,6 +1,6 @@
 ---
-import MatrixBeta from '../components/MatrixBeta.astro';
+import MatrixEffect from '../components/Matrix.astro';
 const delay : number = 5000;
 ---
 
-<MatrixBeta delay={delay} />
+<MatrixEffect delay={delay} />
