fix: add mobile styles to make sidebar responsive

--- a/src/components/ContactSidebar.astro
+++ b/src/components/ContactSidebar.astro
@@ -166,6 +166,13 @@ const {
     box-sizing: border-box;
   }
 
+  /* Mobile styles */
+  @media (max-width: 768px) {
+    .sidebar {
+      width: 100%;
+    }
+  }
+
   .avatar-wrapper {
     display: flex;
     justify-content: center;
