--- a/src/components/Whoami.astro
+++ b/src/components/Whoami.astro
@@ -58,6 +58,13 @@ const timeout = siteMetadata.config.matrixEffect.timeout;
         box-sizing: border-box;
     }
 
+    /* Mobile styles */
+    @media (max-width: 768px) {
+        .whoami {
+            width: 100%;
+        }
+    }
+
     .cursor {
         display: inline-block;
         width: 10px; /* or however wide you want */
