--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -1,6 +1,9 @@
 ---
 import Main from "../layouts/Main.astro";
 import { siteMetadata } from "../siteMetadata";
+import { getCachedLastCommitTimestamp } from "../utils/github.js";
+
+const lastModified = await getCachedLastCommitTimestamp();
 ---
 
-<Main title={`${siteMetadata.title} → home`} last_modified="1734771487"/>
+<Main title={`${siteMetadata.title} → home`} last_modified={lastModified}/>
